--- a/app/flow_meter/jinja2/all_products.html
+++ b/app/flow_meter/jinja2/all_products.html
@@ -6,9 +6,18 @@
 {% endblock %}
 
 {% block content %}
-<ul>
+<table>
+  <tr>
+    <th>Название</th>
+    <th>Количество</th> 
+    <th>Цена</th>
+  </tr>
   {% for product in products %}
-  <li>{{ product.name }} {{ product.quantity }} {{ product.price }}</li>
+   <tr>
+    <td>{{ product.name }}</td>
+    <td>{{ product.quantity }}</td>
+    <td>{{ product.price }}</td>
+   </tr>
   {% endfor %}
-</ul>
+</table>
 {% endblock %}
