--- a/app/flow_meter/jinja2/all_products.html
+++ b/app/flow_meter/jinja2/all_products.html
@@ -14,7 +14,7 @@
   </tr>
   {% for product in products %}
    <tr>
-    <td>{{ product.name }}</td>
+    <td><a href="details/{{ product.id }}">{{ product.name }}</a></td>
     <td>{{ product.quantity }}</td>
     <td>{{ product.price }}</td>
    </tr>
