--- a/app/flow_meter/jinja2/product_details.html
+++ b/app/flow_meter/jinja2/product_details.html
@@ -10,4 +10,6 @@
 <p>Описание: {{ product.description }}</p>
 <p>Цена: {{ product.price }}</p>
 <p>Категория: {{ product.category }}</p>
+
+<p><a href="/products">Назад к продуктам</a></p>
 {% endblock %}
