--- a/app/flow_meter/jinja2/add_product.html
+++ b/app/flow_meter/jinja2/add_product.html
@@ -9,20 +9,18 @@
 <h1>Добавить товар</h1>
 
 <form method="post">
+    {% csrf_token %}
     <div class="form-group">
-        {{ form.title.label_tag }}
         {{ form.name }}
     </div><br>
     <div class="form-group">
-        {{ form.title.label_tag }}
         {{ form.description }}
     </div><br>
     <div class="form-group">
-        {{ form.title.label_tag }}
         {{ form.quantity }}
     </div><br>
     <div class="form-group">
-        {{ form.title.label_tag }}
+        {# {{ form.title.label_tag }} #}
         {{ form.price }}
     </div><br>
     <button type="submit" class="btn btn-success">Добавить товар</button>
