--- a/app/flow_meter/jinja2/product_delete.html
+++ b/app/flow_meter/jinja2/product_delete.html
@@ -17,7 +17,7 @@
 
 <form action="" method="post">
     {{ csrf_input }}
-    <button type="submit" class="btn btn-danger">Да</button>
-    <a href="/products" class="btn btn-success">Нет</a>
+    <button type="submit" class="btn btn-outline-success">Да</button>
+    <a href="/products" class="btn btn-outline-danger">Нет</a>
 </form>
 {% endblock %}
