--- a/app/flow_meter/jinja2/flow_meter/product_list.html
+++ b/app/flow_meter/jinja2/flow_meter/product_list.html
@@ -12,7 +12,7 @@
     <th>Количество</th> 
     <th>Цена</th>
   </tr>
-  {% for product in products %}
+  {% for product in product_list %}
    <tr>
     <td><a href="details/{{ product.id }}">{{ product.name }}</a></td>
     <td>{{ product.quantity }}</td>
