--- a/app/flow_meter/jinja2/base.html
+++ b/app/flow_meter/jinja2/base.html
@@ -22,7 +22,26 @@
     <header id="pageHeader" class="position-absolute w-100 bg-white">
       {# {% include "navbar.html" %} #}
     </header>
-    <main class="flex-shrink-0">{% block content %} {% endblock %}</main>
+    <main class="flex-shrink-0">{% block content %} {% endblock %}
+    
+    {% block pagination %}
+    {% if is_paginated %}
+        <div class="pagination">
+            <span class="page-links">
+                {% if page_obj.has_previous() %}          
+                    <a href="{{ request.path }}?page={{ page_obj.previous_page_number() }}">previous</a>
+                {% endif %}
+                <span class="page-current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+                {% if page_obj.has_next() %}
+                    <a href="{{ request.path }}?page={{ page_obj.next_page_number() }}">next</a>
+                {% endif %}
+            </span>
+        </div>
+    {% endif %}
+    {% endblock %}
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
