--- a/app/flow_meter/jinja2/flow_meter/category_list.html
+++ b/app/flow_meter/jinja2/flow_meter/category_list.html
@@ -12,7 +12,7 @@
 
    
   </tr>
-  {% for category in categories %}
+  {% for category in category_list %}
    <tr>
     <td><a href="details/{{ category.id }}">{{ category.name }}</a></td>
     <td><a href="update/{{ category.id }}" class="btn btn-warning">Редактировать</a></td>
