--- a/app/flow_meter/jinja2/flow_meter/product_form.html
+++ b/app/flow_meter/jinja2/flow_meter/product_form.html
@@ -23,6 +23,9 @@
         {# {{ form.title.label_tag }} #}
         {{ form.price }}
     </div><br>
+    <div class="form-group">
+        {{ form.category }}
+    </div><br>
     <button type="submit" class="btn btn-success">Добавить товар</button>
 </form>
 {% endblock %}
