--- a/app/flow_meter/jinja2/flow_meter/product_form.html
+++ b/app/flow_meter/jinja2/flow_meter/product_form.html
@@ -11,20 +11,7 @@
 <form method="post">
     {{ csrf_input }}
     <div class="form-group">
-        {{ form.name }}
-    </div><br>
-    <div class="form-group">
-        {{ form.description }}
-    </div><br>
-    <div class="form-group">
-        {{ form.quantity }}
-    </div><br>
-    <div class="form-group">
-        {# {{ form.title.label_tag }} #}
-        {{ form.price }}
-    </div><br>
-    <div class="form-group">
-        {{ form.category }}
+    {{ form.as_table() }}
     </div><br>
     <button type="submit" class="btn btn-success">Добавить товар</button>
 </form>
