--- a/app/flow_meter/jinja2/base.html
+++ b/app/flow_meter/jinja2/base.html
@@ -18,13 +18,17 @@
       rel="stylesheet"
     />
   </head>
-  <body class="d-flex flex-column h-100">
-    <header id="pageHeader" class="position-absolute w-100 bg-white">
-      {# {% include "navbar.html" %} #}
-    </header>
-    <main class="flex-shrink-0">{% block content %} {% endblock %}
-    
-    {% block pagination %}
+  <body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-2">
+      {% include "navbar.html" %}
+      </div>
+
+      <div class="col-sm-10">
+      {% block content %} {% endblock %}
+
+      {% block pagination %}
     {% if is_paginated %}
         <div class="pagination">
             <span class="page-links">
@@ -41,8 +45,11 @@
         </div>
     {% endif %}
     {% endblock %}
-    </main>
 
+      </div>
+
+    </div>
+  </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
