--- a/app/flow_meter/jinja2/navbar.html
+++ b/app/flow_meter/jinja2/navbar.html
@@ -11,11 +11,11 @@
      <li>
        <form id="logout-form" method="post" action="{{ url('logout') }}">
         {{ csrf_input }}
-         <button type="submit" class="btn btn-link">Logout</button>
+         <button type="submit" class="btn btn-link">Выход</button>
        </form>
     </li>
    {% else %}
-     <li><a href="{{ url('login') }}">Login</a></li>
+     <li><a href="{{ url('login') }}">Вход</a></li>
    {% endif %}
   </ul>
 
