--- a/app/flow_meter/jinja2/index.html
+++ b/app/flow_meter/jinja2/index.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block content %}
-<h1>Hello World!</h1>
-<p>Welcome to my first Django project!</p>
+<h1>Flow meter</h1>
+<p>Приложение по учету и закупке расходников</p>
+<img src="{{ static('img/wh.png') }}" width="20px" height="20px" alt="Расходомер">
 
 {% endblock %}
